; ModuleID = '/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_match_startup_finished.c'
source_filename = "/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_match_startup_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"org.freedesktop.systemd1\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"/org/freedesktop/systemd1\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"org.freedesktop.systemd1.Manager\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"SystemState\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @match_startup_finished to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_startup_finished(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to i8**
  store i8** %10, i8*** %7, align 8
  %11 = load i8**, i8*** %7, align 8
  %12 = call i32 @assert(i8** %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @sd_bus_message_get_bus(i32* %13)
  %15 = load i8**, i8*** %7, align 8
  %16 = call i32 @sd_bus_get_property_string(i32 %14, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32* null, i8** %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @sd_bus_message_get_bus(i32* %17)
  %19 = call i32 @sd_bus_get_event(i32 %18)
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @sd_event_exit(i32 %19, i32 %20)
  ret i32 0
}

declare dso_local i32 @assert(i8**) #1

declare dso_local i32 @sd_bus_get_property_string(i32, i8*, i8*, i8*, i8*, i32*, i8**) #1

declare dso_local i32 @sd_bus_message_get_bus(i32*) #1

declare dso_local i32 @sd_event_exit(i32, i32) #1

declare dso_local i32 @sd_bus_get_event(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
